# swagger.json
@@ -53,6 +53,74 @@
         }
       }
     },
+    "/api/v1/": {
+      "get": {
+        "summary": "Devuelve información básica de la API",
+        "description": "Se puede utilizar este endpoint para recorrer la versión 1 de la API. En la respuesta se detallan todos los recursos disponibles bajo este namespace.\n",
+        "tags": [
+          "default"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "examples": {
+              "application/json": {
+                "files": "/api/v1/files/",
+                "uploads": "/api/v1/uploads/",
+                "documents": "/api/v1/documents/"
+              }
+            }
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/api/v1/files/{filename}": {
+      "get": {
+        "summary": "Devuelve el archivo almacenado en el servidor según su `filename`",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "filename",
+            "required": true,
+            "type": "string",
+            "minimum": 1,
+            "maximum": 1,
+            "description": "Nombre del archivo almacenado."
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "files"
+        ],
+        "responses": {
+          "200": {
+            "description": "El archivo buscado.",
+            "schema": {
+              "type": "file"
+            }
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
     "/api/auth/": {
       "get": {
         "summary": "Devuelve información básica de la API",
@@ -268,6 +336,7 @@
             "required": true,
             "type": "string",
             "minimum": 1,
+            "maximum": 1,
             "description": "ID del documento."
           }
         ],
@@ -284,6 +353,183 @@
             "description": "El documento buscado.",
             "schema": {
               "$ref": "#/definitions/Document"
+            }
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      },
+      "put": {
+        "summary": "Actualiza un documento identificado por su 'id'.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "minimum": 1,
+            "maximum": 1,
+            "description": "ID del documento."
+          },
+          {
+            "in": "body",
+            "required": true,
+            "name": "document",
+            "description": "Objeto JSON.",
+            "schema": {
+              "$ref": "#/definitions/AnyObject"
+            }
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "documents"
+        ],
+        "responses": {
+          "204": {
+            "$ref": "#/responses/NoContent"
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Elimina un documento según su 'id'.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "minimum": 1,
+            "maximum": 1,
+            "description": "ID del documento."
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "documents"
+        ],
+        "responses": {
+          "204": {
+            "$ref": "#/responses/NoContent"
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/api/v1/upload/text/": {
+      "post": {
+        "summary": "Almacena un archivo de texto en el servidor.",
+        "description": "El string de texto enviado en la variable `text` del cuerpo del mensaje es almacenado como un archivo en el servidor. El nombre del mismo puede indicarse a través de la llave `filename` incluida la extensión. En caso de no configurarla, se le asignara un codigo aleatorio al archivo.\n",
+        "parameters": [
+          {
+            "in": "body",
+            "required": true,
+            "name": "document",
+            "description": "Objeto JSON.",
+            "schema": {
+              "$ref": "#/definitions/TextDocument"
+            }
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "uploads"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/File"
+            }
+          },
+          "400": {
+            "$ref": "#/responses/Error"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/api/v1/upload/json/": {
+      "post": {
+        "summary": "Almacena un archivo JSON en el servidor.",
+        "description": "El objeto JSON enviado en la variable `json` del cuerpo del mensaje es almacenado como un archivo en el servidor. El nombre con el cual será almacenado corresponderá a un codigo aleatorio tipo `cuid`.\n",
+        "parameters": [
+          {
+            "in": "body",
+            "required": true,
+            "name": "document",
+            "description": "Objeto JSON.",
+            "schema": {
+              "$ref": "#/definitions/JSONDocument"
+            }
+          }
+        ],
+        "security": [
+          {
+            "JWTTokenAuthentication": []
+          }
+        ],
+        "tags": [
+          "uploads"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/File"
             }
           },
           "400": {
@@ -321,11 +567,17 @@
       "type": "number",
       "example": 1
     },
-    "URL": {
+    "DocumentURL": {
       "description": "URL correspondiente al recurso.",
       "type": "string",
       "pattern": "^(/[^/ ]*)+/?$",
       "example": "/helpers/api/v1/documents/cjld2cjxh0000qzrmn831i7rn"
+    },
+    "FilesURL": {
+      "description": "URL correspondiente al recurso.",
+      "type": "string",
+      "pattern": "^(/[^/ ]*)+/?$",
+      "example": "/helpers/api/v1/files/archivo.txt"
     },
     "Email": {
       "description": "Dirección de Email",
@@ -338,12 +590,6 @@
       "type": "string",
       "format": "password",
       "example": "secret"
-    },
-    "ISODate": {
-      "description": "Fecha en formato ISO UTC",
-      "type": "string",
-      "pattern": "\\d{4}-[01]\\d-[0-3]\\dT[0-2]\\d:[0-5]\\d:[0-5]\\d\\.\\d+",
-      "example": "2018-10-19T14:06:44.271Z"
     },
     "CreatedDate": {
       "description": "Fecha de creación del recuro",
@@ -475,7 +721,7 @@
       "description": "URL para obtener la anterior lista de recursos, paginados utilizando las opciones `offset` y `limit`.",
       "type": "string",
       "pattern": "^(/[^/ ]*)+/?$",
-      "example": "/helpers/api/v1/documents/?offset=10&limit=10"
+      "example": "/helpers/api/v1/documents/?offset=0&limit=10"
     },
     "Documents": {
       "type": "object",
@@ -498,6 +744,63 @@
         }
       }
     },
+    "TextDocument": {
+      "type": "object",
+      "description": "Parámetros para almacenar un archivo de texto en el servidor.",
+      "properties": {
+        "filename": {
+          "$ref": "#/definitions/FileName"
+        },
+        "text": {
+          "type": "string",
+          "description": "Texto a almacenar en un archivo en el servidor.",
+          "example": "Hello, World!"
+        }
+      }
+    },
+    "JSONDocument": {
+      "type": "object",
+      "description": "Parámetros para almacenar un archivo JSON en el servidor.",
+      "properties": {
+        "json": {
+          "$ref": "#/definitions/AnyObject"
+        }
+      }
+    },
+    "FileName": {
+      "type": "string",
+      "description": "Nombre del archivo a almacenar, incluyendo su extensión.",
+      "example": "archivo.txt"
+    },
+    "File": {
+      "type": "object",
+      "description": "Metadatos de archivo almacenado en el servidor.",
+      "properties": {
+        "id": {
+          "$ref": "#/definitions/ID"
+        },
+        "type": {
+          "type": "string",
+          "enum": [
+            "files"
+          ],
+          "description": "Tipo del recurso.",
+          "example": "files"
+        },
+        "url": {
+          "$ref": "#/definitions/FilesURL"
+        },
+        "created": {
+          "$ref": "#/definitions/CreatedDate"
+        },
+        "updated": {
+          "$ref": "#/definitions/UpdatedDate"
+        },
+        "filename": {
+          "$ref": "#/definitions/FileName"
+        }
+      }
+    },
     "Document": {
       "type": "object",
       "description": "Documento JSON almacenado en la base.",
@@ -506,8 +809,7 @@
           "$ref": "#/definitions/CreatedDate"
         },
         "data": {
-          "$ref": "#/definitions/AnyObject",
-          "description": "Documento a ser almacenado."
+          "$ref": "#/definitions/AnyObject"
         },
         "id": {
           "$ref": "#/definitions/ID"
@@ -515,13 +817,13 @@
         "type": {
           "type": "string",
           "enum": [
-            "document"
+            "documents"
           ],
           "description": "Tipo del recurso.",
           "example": "document"
         },
         "url": {
-          "$ref": "#/definitions/URL"
+          "$ref": "#/definitions/DocumentURL"
         },
         "updated": {
           "$ref": "#/definitions/UpdatedDate"
@@ -550,6 +852,9 @@
         "type": "string",
         "example": "Server Error"
       }
+    },
+    "NoContent": {
+      "description": ""
     },
     "Error": {
       "description": "El request es invalido o no puede procesarse. Un mensaje de error con más información seré provisto en el cuerpo del mensaje.\n",
